--- a/src/Sass/Start.scss
+++ b/src/Sass/Start.scss
@@ -1,7 +1,22 @@
 .start-wrapper{
     width: 100%;
-    min-height: 90vh;
+    min-height: 85vh;
     margin-top: 10vh;
     display: flex;
-    background-color: blue;
+    flex-direction: column;
+    justify-content: center;
+
+
+    .text-container{
+        margin: 4rem;
+        .hero-text{
+            font-size: 4.5rem;
+            margin: 0rem;
+        }
+        .under-text{
+            margin: 1rem 0rem;
+            font-size: 1.4rem;
+            font-weight: 400;
+        }
+    }
 }
