added some style in start page

--- a/src/Sass/Search.scss
+++ b/src/Sass/Search.scss
@@ -1,6 +1,6 @@
 .search-input{
-    padding: 1rem;
-    border-radius: .5rem;
-    border: 2px solid $purple;
+    padding: .5rem 1rem;
+    border: none;
     outline: none;
+    background: lightgrey;
 }
