--- a/src/Sass/Style.scss
+++ b/src/Sass/Style.scss
@@ -9,7 +9,7 @@ $green: #22eaaa;
 //imports
 @import 'Nav.scss';
 @import 'Start.scss';
-@import 'Login.scss';
 @import 'Cart.scss';
 @import 'Search.scss';
+@import 'ProductPage.scss';
 
