--- a/src/Sass/Nav.scss
+++ b/src/Sass/Nav.scss
@@ -8,17 +8,27 @@
   left: 0;
   right: 0;
   top: 0;
+  padding: 0rem 4rem;
+  background: $white;
+
+  .fa-headphones{
+    font-size: 2.5rem;
+    color: $green;
+
+  }
 
   .right-container{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    justify-content: space-between;
 
         .nav-list {
           list-style: none;
           display: flex;
           flex-direction: row;
+
         }
     }
 }
