--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,16 @@
-body {
+*{
   box-sizing: border-box;
   padding: 0rem;
   margin: 0;
+}
+
+body {
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
 }
 
