--- a/src/Sass/Start.scss
+++ b/src/Sass/Start.scss
@@ -1,22 +1,24 @@
 .start-wrapper{
     width: 100%;
     min-height: 85vh;
-    margin-top: 10vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
 
     .text-container{
+        
         margin-left: 4rem;
         padding: 0rem;
+        position: relative;
+        z-index: 99;
 
         .company-name{
             font-family: 'Caveat', cursive;
             font-size: 4rem;
             color: $purple;
             margin: 0rem;
-            text-shadow: 1px 1px 1px rgba(0, 0, 0, 01) ;
-            
         }
         .hero-text{
             font-size: 4rem;
@@ -34,6 +36,17 @@
             margin:0rem 0rem 1rem;
             font-size: 1.4rem;
             font-weight: 300;
+        }
+    }
+
+    .right-container{
+        .circle{
+            width: 40rem;
+            height: 40rem;
+            margin-top: 17rem;
+            margin-right: 4rem;
+            border-radius: 50%;
+            background-color: $green;
         }
     }
 }
