--- a/src/index.scss
+++ b/src/index.scss
@@ -12,5 +12,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Poppins', sans-serif;
+  @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
 }
 
